tests/paczka1/fuzzy1/47020239.err
Error in line 3: aok8g S77 61,1
Error in line 5: aok8g A227 7,9
Error in line 18: 4B1sxeD S77 11,9
